--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   jenkins:
     restart: on-failure:10
     image: jenkins/jenkins:latest
-    container_name: my-jenkins
+    container_name: jenkins
     ports:
       - 8099:8080
     volumes:
@@ -16,6 +16,6 @@ services:
     volumes:
       - ./nginx.conf.prod:/etc/nginx/conf.d/nginx.conf
     depends_on:
-      - api
+      - jenkins
 volumes:
      jenkins:
